syntax = "proto3";

package taskspb;

option go_package = "proto/;taskspb";

import "google/protobuf/empty.proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (google.protobuf.Empty);
  rpc DeleteTask(DeleteTaskRequest) returns (google.protobuf.Empty);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
}

message CreateTaskRequest {
  string description = 1;
  string userId = 2; // The ID of the user creating the task
}

message CreateTaskResponse {
  string taskId = 1;
}

message UpdateTaskRequest {
  string taskId = 1;
  string description = 2;
  string userId = 3; // The ID of the user updating the task
}

message DeleteTaskRequest {
  string taskId = 1;
  string userId = 2; // The ID of the user deleting the task
}

message GetTaskRequest {
  string taskId = 1;
  string userId = 2; // The ID of the user retrieving the task
}

message GetTaskResponse {
  string taskId = 1;
  string description = 3;
}

message ListTasksRequest {
  int32 pageId = 1;
  int32 pageSize = 2;
  string userId = 3; // The ID of the user requesting the task list
}

message ListTasksResponse {
  repeated GetTaskResponse tasks = 1;
}
